Fix crashed when dynamic playlist based on last.fm is aborted

Since the bias solver runs in a different thread care must be taken
for signals.

BUG: 314243
FIXED-IN: 2.8